--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "private": false,
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc && tsc-alias -p tsconfig.json",
     "start": "node dist/app.js",
-    "dev": "nodemon app.ts"
+    "dev": "nodemon -r tsconfig-paths/register app.ts"
   },
   "keywords": [],
   "license": "ISC",
+  "_moduleAliases": {
+    "@root": "./src"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
     "cookie-parser": "^1.4.7",
@@ -21,6 +24,7 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
@@ -29,6 +33,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3"
   }
