--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "build": "npx tsc && tsc-alias -p tsconfig.json",
     "start": "node dist/app.js",
-    "dev": "nodemon -r tsconfig-paths/register app.ts"
+    "dev": "nodemon -r tsconfig-paths/register app.ts",
+    "docker-build": "docker build -t jobstrackr-api .",
+    "docker-compose": "docker-compose up"
   },
   "keywords": [],
   "license": "ISC",
