--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "npx tsc && tsc-alias -p tsconfig.json",
     "start": "node dist/app.js",
     "dev": "nodemon -r tsconfig-paths/register app.ts",
+    "test": "npx jest",
     "docker-build": "docker build -t jobstrackr-api .",
     "docker-compose": "docker-compose up"
   },
@@ -29,7 +30,12 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
