--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
